syntax = "proto3";
package artifact;
option go_package = "github.com/story-engine/main-service/proto/artifact";

import "google/protobuf/timestamp.proto";
import "proto/common/common.proto";

// Artifact represents an artifact entity
message Artifact {
  string id = 1;
  string world_id = 2;
  string name = 3;
  string description = 4;
  string rarity = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// ArtifactReference represents a reference from an artifact to an entity
message ArtifactReference {
  string id = 1;
  string artifact_id = 2;
  string entity_type = 3; // "character" or "location"
  string entity_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

// CreateArtifactRequest is the request to create a new artifact
message CreateArtifactRequest {
  string world_id = 1;
  repeated string character_ids = 2;
  repeated string location_ids = 3;
  string name = 4;
  string description = 5;
  string rarity = 6;
}

// CreateArtifactResponse is the response after creating an artifact
message CreateArtifactResponse {
  Artifact artifact = 1;
}

// GetArtifactRequest is the request to get an artifact by ID
message GetArtifactRequest {
  string id = 1;
}

// GetArtifactResponse is the response containing an artifact
message GetArtifactResponse {
  Artifact artifact = 1;
}

// ListArtifactsRequest is the request to list artifacts for a world
message ListArtifactsRequest {
  string world_id = 1;
  common.PaginationRequest pagination = 2;
}

// ListArtifactsResponse is the response containing a list of artifacts
message ListArtifactsResponse {
  repeated Artifact artifacts = 1;
  int32 total_count = 2;
}

// UpdateArtifactRequest is the request to update an artifact
message UpdateArtifactRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string rarity = 4;
  optional ArtifactReferenceUpdate character_ids = 5; // nil = no change, empty = remove all
  optional ArtifactReferenceUpdate location_ids = 6; // nil = no change, empty = remove all
}

// ArtifactReferenceUpdate represents an update to artifact references
message ArtifactReferenceUpdate {
  repeated string ids = 1;
}

// UpdateArtifactResponse is the response after updating an artifact
message UpdateArtifactResponse {
  Artifact artifact = 1;
}

// DeleteArtifactRequest is the request to delete an artifact
message DeleteArtifactRequest {
  string id = 1;
}

// DeleteArtifactResponse is the response after deleting an artifact
message DeleteArtifactResponse {
}

// GetArtifactReferencesRequest is the request to get references for an artifact
message GetArtifactReferencesRequest {
  string artifact_id = 1;
}

// GetArtifactReferencesResponse is the response containing artifact references
message GetArtifactReferencesResponse {
  repeated ArtifactReference references = 1;
}

// AddArtifactReferenceRequest is the request to add a reference to an artifact
message AddArtifactReferenceRequest {
  string artifact_id = 1;
  string entity_type = 2; // "character" or "location"
  string entity_id = 3;
}

// AddArtifactReferenceResponse is the response after adding a reference
message AddArtifactReferenceResponse {
}

// RemoveArtifactReferenceRequest is the request to remove a reference from an artifact
message RemoveArtifactReferenceRequest {
  string artifact_id = 1;
  string entity_type = 2; // "character" or "location"
  string entity_id = 3;
}

// RemoveArtifactReferenceResponse is the response after removing a reference
message RemoveArtifactReferenceResponse {
}

// ArtifactService provides artifact management operations
service ArtifactService {
  rpc CreateArtifact(CreateArtifactRequest) returns (CreateArtifactResponse);
  rpc GetArtifact(GetArtifactRequest) returns (GetArtifactResponse);
  rpc UpdateArtifact(UpdateArtifactRequest) returns (UpdateArtifactResponse);
  rpc ListArtifacts(ListArtifactsRequest) returns (ListArtifactsResponse);
  rpc DeleteArtifact(DeleteArtifactRequest) returns (DeleteArtifactResponse);
  rpc GetArtifactReferences(GetArtifactReferencesRequest) returns (GetArtifactReferencesResponse);
  rpc AddArtifactReference(AddArtifactReferenceRequest) returns (AddArtifactReferenceResponse);
  rpc RemoveArtifactReference(RemoveArtifactReferenceRequest) returns (RemoveArtifactReferenceResponse);
}

